--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <div class="container grid-xl">
         <div class="columns">
           <div class="column col-12">
-            <p class="social-links"><a href="https://twitter.com/" target="_blank">Twitter</a> · <a href="https://facebook.com/" target="_blank">Facebook</a> · <a href="mailto:mkc@iobc.ac.cn" target="_blank">Email</a></p>
+            <p class="social-links"><a href="https://beian.miit.gov.cn/#/Integrated/index" target="_blank">渝ICP备15007658号-2</a> · <a href="https://facebook.com/" target="_blank">Facebook</a> · <a href="mailto:mkc@iobc.ac.cn" target="_blank">Email</a></p>
           </div>
         </div>
       </div>
