--- a/index.html
+++ b/index.html
@@ -55,17 +55,9 @@
       <div class="container grid-xl">
         <div class="columns">
           <div class="column col-12">
-            <p class="social-links"><a href="https://beian.miit.gov.cn/#/Integrated/index" target="_blank">渝ICP备15007658号-2</a> · <a href="https://facebook.com/" target="_blank">Facebook</a> · <a href="mailto:mkc@iobc.ac.cn" target="_blank">Email</a></p>
+            <p class="social-links"><a href="https://beian.miit.gov.cn/#/Integrated/index" target="_blank">渝ICP备15007658号-2</a> · <a href="https://ethereum.org/en/eth2/" target="_blank">Ethereum 2.0</a> · <a href="mailto:mkc@iobc.ac.cn" target="_blank">Email</a></p>
           </div>
         </div>
       </div>
     </div>
-    <script type="text/javascript" async="" src="./files/analytics.js"></script><script async="" src="./files/js"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-      gtag('config', 'UA-105877-6'); 
-    </script>
-  
 </body></html>
