--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>IOBC | Institute of Block Chain</title>
+    <title>LibreOS | Institute of Operating System </title>
     
     <meta name="robots" content="index, follow">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="description" content="IOBC is a R&D team focusing on blockchain technology research, education. IOBC aims to develop Operating System, Web3, Fintech, and Decentralized Apps.">
-    <meta property="og:url" content="https://iobc.ac.cn">
-    <meta property="og:title" content="IOBC | Institute of Block Chain  | 区块链研究院 ">
-    <meta property="og:description" content="Institute of Blockchain is a R&D team focusing on blockchain technology research, education. IOBC aims to develop Operating System, Web3, Fintech, and Decentralized Apps.">
+    <meta name="description" content="Libre OS - Libre Operating System">
+    <meta property="og:url" content="https://libreos.org">
+    <meta property="og:title" content="Libre OS - Libre Operating System ">
+    <meta property="og:description" content="Libre OS - Libre Operating System">
     <link rel="shortcut icon" href="./assets/favicon.ico">
     <link rel="icon" href="./assets/favicon.png">
     <link rel="stylesheet" href="./files/blocks.min.css">
-    <link rel="canonical" href="https://iobc.ac.cn">
+    <link rel="canonical" href="https://libreos.org">
   </head>
   <body>
     <div class="section section-hp">
